Brought in site-details-widget

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2359,3 +2359,26 @@ side-panel-white-row {
     font-size: 0.75rem;
     line-height: 2rem;
  }
+
+#site-details-wrapper .row {
+    border: 1px solid #d3d4d1;
+    background-color: #ebebeb;
+    font-family: "Roboto Condensed";
+    color: #4a4a4a;
+    font-size: 0.75rem;
+    line-height: 2rem;
+
+ }
+
+ #site-details-wrapper .row .value-column {
+    color: #3D647D;
+    text-align: right;
+    align-self: center;
+}
+
+
+ #site-details-wrapper .row .caption-column {
+    color: #4a4a4a;
+    text-align: left;
+    align-self: center;
+}
