--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -201,3 +201,28 @@
     </div>
 </script>
 
+
+<script type='text/html' id='site-details-template'>
+    <div class="container-fluid" id="site-details-wrapper">
+        <div class="row">
+            <div class="col-8 caption-column">FBIS Site Code</div>
+            <div class="col-4 value-column"><%= fbis_site_code %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">Site Coordinates</div>
+            <div class="col-4 value-column"><%= site_coordinates %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">Site Description</div>
+            <div class="col-4 value-column"><%= site_description %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">Geomorphological Zone</div>
+            <div class="col-4 value-column"><%= geomorphological_zone %></div>
+        </div>
+        <div class="row">
+            <div class="col-8 caption-column">River</div>
+            <div class="col-4 value-column"><%= river %></div>
+        </div>
+    </div>
+</script>
