Add print chart

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -138,6 +138,10 @@
                 <div class="chart-container ajax-container">
                      <div class="table-title">
                         Ecological Chart
+                        <i data-download-title="Ecological charts"
+                           data-toggle="tooltip" data-placement="left"
+                           title="Download charts"
+                           class="fa fa-download pull-right download-icon download-chart"></i>
                     </div>
                     <div id="ecological-chart-container" class="row"></div>
                 </div>
