--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -152,7 +152,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row side-panel-white-row">
+            <div class="row side-panel-white-row" style="padding-bottom: 0.25rem;">
                 <div class="col-3" style="align-self: center">
                     Forms
                 </div>
