Added function to render line chart

--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -226,3 +226,10 @@
         </div>
     </div>
 </script>
+
+<script type="text/template" id="site-detail-registry-values">
+    <div class="result-search" data-search-result-id="">
+        <p class="group-title"><%= name %></p>
+        <a class="group-description"><%= value %></a>
+    </div>
+</script>
