--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -191,12 +191,16 @@
 <script type='text/html' id='climate-data-template'>
     <div class="container-fluid" id="climate-data-wrapper">
         <div class="row">
-            <div class="col-8 caption-column">Mean annual temperature</div>
-            <div class="col-4 value-column"><%= mean_annual_temperature %></div>
+            <div class="col-12 caption-column">Mean annual temperature</div>
+            <div class="col-12 right-panel-chart">
+                <canvas id="temperature_chart"></canvas>
+            </div>
         </div>
         <div class="row">
             <div class="col-8 caption-column">Mean annual rainfall</div>
-            <div class="col-4 value-column"><%= mean_annual_rainfall %></div>
+            <div class="col-12 right-panel-chart">
+                <canvas id="rainfall_chart"></canvas>
+            </div>
         </div>
     </div>
 </script>
