--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -143,6 +143,8 @@
                            title="Download charts"
                            class="fa fa-download pull-right download-icon download-chart"></i>
                     </div>
+                    <div class="ecological-legend-container">
+                    </div>
                     <div id="ecological-chart-container" class="row"></div>
                 </div>
                 <div class="vertical-space"></div>
