If more than 4 charts

--- a/sass/templates/sass_dashboard_multiple_sites.html
+++ b/sass/templates/sass_dashboard_multiple_sites.html
@@ -136,7 +136,7 @@
                 </div>
                 <div class="vertical-space"></div>
                 <div class="chart-container ajax-container">
-                     <div class="table-title">
+                    <div class="table-title">
                         Ecological Chart
                         <i data-download-title="Ecological charts"
                            data-toggle="tooltip" data-placement="left"
@@ -146,6 +146,14 @@
                     <div class="ecological-legend-container">
                     </div>
                     <div id="ecological-chart-container" class="row"></div>
+                    <div class="ecological-alert-container">
+                        <div class="ecological-alert alert alert-warning"
+                             role="alert">
+                            Too many ecoregions combination selected to show
+                            all
+                            charts. Combinations not displayed :
+                        </div>
+                    </div>
                 </div>
                 <div class="vertical-space"></div>
                 <div class="table-container ajax-container">
