--- a/sass/static/css/sass_dashboard.css
+++ b/sass/static/css/sass_dashboard.css
@@ -155,3 +155,13 @@ body {
     margin-right: 5px;
     margin-left: 10px;
 }
+
+.ecological-alert-container {
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.ecological-alert {
+    display: none;
+}
