--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2335,11 +2335,15 @@ div:hover::-webkit-scrollbar {
 .fbis-data-flex-block-row {
     display: inline-flex;
     width: 100%;
-    flex-wrap: wrap;s
+    flex-wrap: wrap;
 }
 
 .fbis-data-flex-block {
     display: inline-flex;
     border-style: solid;
     flex-grow: 1;
+}
+
+.fbis-selected {
+    background-color: red;
 }
