--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -21,3 +21,10 @@
     </div>
 </script>
 
+<script type='text/html' id='block-data-template'>
+    {% load jsonify %}
+    {% autoescape off %}
+        {% get_html_for_fbis_blocks data_in %}
+    {% endautoescape %}
+</script>
+
