--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -41,6 +41,7 @@
     </div>
 </script>
 
+{# Right Panel Species Overview #}
 <script type="text/template" id="species-template">
     <div id="species-detail-wrapper">
         <div id="species-detail">
@@ -73,46 +74,46 @@
                 </table>
             </div>
             <div id="species-detail-summary-origin">
-                <div class="row dd-sub-title">ORIGIN</div>
+                <div class="row dd-sub-title">Origin</div>
                 <div class="row dd-status-list origin-info-list-detail">
-                <span class="dd-status-item"
-                      data-value="Native">Native</span>
-                    <span class="dd-status-item"
-                          data-value="Non-native">Non-native</span>
-                    <span class="dd-status-item"
-                          data-value="Translocated">Translocated</span>
                 </div>
             </div>
             <div id="species-detail-summary-endemism">
-                <div class="row dd-sub-title">ENDEMISM</div>
+                <div class="row dd-sub-title">Endemism</div>
                 <div class="row dd-status-list endemic-info-list-detail">
                 </div>
             </div>
             <div id="species-detail-summary-conservation-status">
-                <div class="row dd-sub-title">CONSERVATION STATUS</div>
+                <div class="row dd-sub-title">Conservation Status</div>
                 <div class="row dd-status-list conservation-status-list-detail">
-                <span class="dd-status-item"
-                      data-value="EX">Extinct (EX)</span>
-                    <span class="dd-status-item" data-value="EW">Extinct in the wild (EW)</span>
-                    <span class="dd-status-item" data-value="CR">Critically endangered (CR)</span>
-                    <span class="dd-status-item"
-                          data-value="EN">Endangered (EN)</span>
-                    <span class="dd-status-item"
-                          data-value="VU">Vulnerable (VU)</span>
-                    <span class="dd-status-item" data-value="NT">Near threatened (NT)</span>
-                    <span class="dd-status-item" data-value="LC">Least concern (LC)</span>
-                    <span class="dd-status-item" data-value="DD">Data deficient (DD)</span>
-                    <span class="dd-status-item" data-value="NE">Not evaluated (NE)</span>
+            </div>
+            <a href="https://apiv3.iucnredlist.org/api/v3/taxonredirect/<%= iucn_redlist_id %>/" target="_blank">
+                <div class="iucn-species-page-link">
+                    IUCN species page
+                </div>
+            </a>
+            <div id="third-party-images" class="search-results-wrapper">
+                <div class="search-results-total" data-visibility="false">
+                    Images
+                    <i class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
             </div>
              <div class="container-fluid">
                 <button id="open-detailed-view"
                         class="btn fbis-button right-panel-button right-panel-last-button">
-                    Open detailed dashboard
+                    OPEN DASHBOARD
                 </button>
             </div>
         </div>
 
+    </div>
+</script>
+
+<script type="text/template" id="third-party-template">
+    <div class="third-party-fetching-info">
+        Fetching...
+    </div>
+    <div class="content container-fluid third-party-wrapper" style="padding-top: 0;">
     </div>
 </script>
 
