Final styling fixes

--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -116,6 +116,7 @@
 #open-detailed-view {
     font-size: 10pt;
     text-transform: none;
+    width: -webkit-fill-available;
 }
 
 .download-as-csv {
