--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -43,7 +43,8 @@
                        class="col-sm-2 col-form-label col-form-label">Collector</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control form-control-sm"
-                           id="collector" placeholder="">
+                           id="collector" placeholder="" name="collector">
+                    <input type="hidden" name="collector_id" id="collector_id">
                 </div>
             </div>
             <div class="form-group row">
@@ -79,20 +80,19 @@
                         </td>
                         <td>
                             <div class="form-check">
-                                <input class="form-check-input" type="checkbox"
+                                <input class="form-check-input observed" type="checkbox"
                                        value=""
-                                       name="{{ taxon.taxon_id }}-observed"
-                                       pattern="[0-9]">
+                                       name="{{ taxon.taxon_id }}-observed">
                                 <label class="form-check-label">
                                 </label>
                             </div>
                         </td>
                         <td>
 
-                            <input type="number"
+                            <input type="number" min="0"
                                    name="{{ taxon.taxon_id }}-abundance"
                                    class="form-control taxon-abundance"
-                                   placeholder="">
+                                   placeholder="0">
                         </td>
                         <td>
                             <select class="form-control"
