--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -113,11 +113,10 @@
     text-align: center;
 }
 
-.open-detailed-view {
+#open-detailed-view {
     font-size: 10pt;
     text-transform: none;
-    margin-top: 10px;
-    margin-bottom: 2px;
+    width: -webkit-fill-available;
 }
 
 .download-as-csv {
