--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -41,41 +41,78 @@
     </div>
 </script>
 
+{# Right Panel Species Overview #}
 <script type="text/template" id="species-template">
-    <div class="content">
-        <div class="iucn-status"><span
-                class="name"><%= iucn_status_name %></span><span
-                class="full-name"><%= iucn_status_full_name %></span></div>
-        <div class="species-count"><b><%= count %></b><br> <span
-                class="records-link"> <a href="#">records</a></span></div>
-        <div class="taxonomy-system">
+    <div id="species-detail-wrapper">
+        <div id="species-detail">
+            <div id="species-detail-summary-head-table">
+                <table>
+                    <tr class="species-detail-row">
+                        <td class="species-detail-cell cell-header">
+                            Taxon
+                        </td>
+                        <td class="species-detail-cell cell-content">
+                            <%= scientific_name %>
+                        </td>
+                    </tr>
+                    <tr class="species-detail-row">
+                        <td class="species-detail-cell cell-header">
+                            Common Name
+                        </td>
+                        <td class="species-detail-cell cell-content">
+                            <%= canonical_name %>
+                        </td>
+                    </tr>
+                    <tr class="species-detail-row">
+                        <td class="species-detail-cell cell-header">
+                            Occurrences
+                        </td>
+                        <td class="species-detail-cell cell-content">
+                            <%= count %>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div id="species-detail-summary-origin">
+                <div class="search-results-total">Origin</div>
+                <div class="row dd-status-list origin-info-list-detail">
+                </div>
+            </div>
+            <div id="species-detail-summary-endemism">
+                <div class="search-results-total">Endemism</div>
+                <div class="row dd-status-list endemic-info-list-detail">
+                </div>
+            </div>
+            <div id="species-detail-summary-conservation-status">
+                <div class="search-results-total">Conservation Status</div>
+                <div class="row dd-status-list conservation-status-list-detail">
+            </div>
+            <a href="https://apiv3.iucnredlist.org/api/v3/taxonredirect/<%= iucn_redlist_id %>/" target="_blank">
+                <div class="iucn-species-page-link">
+                    IUCN species page
+                </div>
+            </a>
+            <div id="third-party-images" class="search-results-wrapper">
+                <div class="search-results-total" data-visibility="false">
+                    Images
+                </div>
+            </div>
+             <div class="container-fluid" style="padding: 0.25rem;">
+                <button id="open-detailed-view"
+                        class="btn fbis-button right-panel-button right-panel-last-button">
+                    OPEN DASHBOARD
+                </button>
+            </div>
+        </div>
 
-        </div>
-        <div class="origin-info">
-            <div class="row">
-                <div class="col-lg-5">
-                    ORIGIN
-                </div>
-                <div class="col-lg-7">
-                    : <%= origin %>
-                </div>
-            </div>
-        </div>
-        <div class="endemism-info">
-            <div class="row">
-                <div class="col-lg-5">
-                    ENDEMISM
-                </div>
-                <div class="col-lg-7">
-                    : <%= endemism %>
-                </div>
-            </div>
-        </div>
-        <div class="open-detailed-button-container">
-            <button class="btn btn-inf open-detailed-view">Open detailed
-                dashboard
-            </button>
-        </div>
+    </div>
+</script>
+
+<script type="text/template" id="third-party-template">
+    <div class="third-party-fetching-info">
+        Fetching...
+    </div>
+    <div class="content container-fluid third-party-wrapper" style="padding-top: 0;">
     </div>
 </script>
 
