--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -274,6 +274,7 @@
         </div>
         <div class="col-lg-12 filter-content" id="spatial-scale-container" style="display: none;">
         </div>
+        <div class="spatial-filter-container" style="width: 100%"></div>
         {% if bims_preferences.enable_catchmet_filter %}
         <div class="small-subtitle spatial-scale-sub-panel">
             Catchment
