Update side pannel to show common names

--- a/bims/templates/map_page/map-templates.html
+++ b/bims/templates/map_page/map-templates.html
@@ -60,7 +60,7 @@
                             Common Name
                         </td>
                         <td class="species-detail-cell cell-content">
-                            <%= canonical_name %>
+                            <%= common_name %>
                         </td>
                     </tr>
                     <tr class="species-detail-row">
