Created basic layout for overview pannel to reside within

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -13,18 +13,32 @@
     <div class="container dashboard-wrapper">
         <div class="container row">
             <div class="col-lg-4">
-                <h5 class="dd-title" style="float: left">Distribution</h5>
-                <button id="export-taxasite-map" style="float: right"
-                        class="btn btn-default btn-element-download"><i
-                        class="fa fa-download"></i></button>
-                <div id="taxasite-map" class="map"
-                     style="height: 300px; width: 100%; border: 1px solid black"></div>
-                <h5 class="dd-title" style="margin-top: 15px">Overview</h5>
-                <div class="overview-taxa-table dashboard-table"
-                     style="margin-top: 10px; margin-bottom: 10px"></div>
-                <h5 class="dd-title">Names & Taxonomy</h5>
-                <div class="overview-name-taxonomy-table dashboard-table"
-                     style="margin-top: 10px; margin-bottom: 10px"></div>
+                <div class="row">
+                    <div class="col-lg-12" id="fish-ssdd-distribution">
+                        <h5 class="dd-title" style="float: left">
+                            Distribution</h5>
+                        <button id="export-taxasite-map" style="float: right"
+                                class="btn btn-default btn-element-download"><i
+                                class="fa fa-download"></i></button>
+                        <div id="taxasite-map"
+                             class="map"
+                             style="height: 300px; width: 100%; border: 1px solid black">
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12" id="fish-ssdd-overview">
+                        <h5 class="dd-title" style="margin-top: 15px">
+                            Overview</h5>
+                        <div class="overview-taxa-table dashboard-table"
+                             style="margin-top: 10px; margin-bottom: 10px"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12" id="fish-ssdd-overview">
+                    </div>
+                </div>
             </div>
             <div class="col-lg-8 dashboard-graph-wrapper">
                 <div class="row">
