--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -14,6 +14,7 @@
         <div class="container row">
             <div class="col-lg-4">
                 <div class="row">
+                    {# Distribution #}
                     <div class="col-lg-12" id="fish-ssdd-distribution">
                         <h5 class="dd-title" style="float: left">
                             Distribution</h5>
@@ -27,16 +28,25 @@
 
                     </div>
                 </div>
+
                 <div class="row">
+                    {# Overview #}
                     <div class="col-lg-12" id="fish-ssdd-overview">
-                        <h5 class="dd-title" style="margin-top: 15px">
+                            <h5 class="dd-title" style="margin-top: 15px">
                             Overview</h5>
-                        <div class="overview-taxa-table dashboard-table"
-                             style="margin-top: 10px; margin-bottom: 10px"></div>
+                              {# Overview Site details #}
+                            <div class="container row"
+                                 id="fish-ssdd-site-details">
+                                <div class="col-12" id="overview">
+
+                                </div>
+                            </div>
+
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12" id="fish-ssdd-overview">
+                    {# Occurrence Data #}
+                    <div class="col-lg-12" id="fish-ssdd-occurrence-data">
                     </div>
                 </div>
             </div>
