--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -37,9 +37,20 @@
                               {# Overview Site details #}
                             <div class="container row"
                                  id="fish-ssdd-site-details">
-                                <div class="col-12" id="overview">
 
+                                <div class="col-12" id="overview"></div>
+                                <div class="col-12 sub-title" class="site-details-header">
+                                    Catchments
                                 </div>
+                                <div class="col-12" id="catchments"></div>
+                                 <div class="col-12 sub-title" class="site-details-header">
+                                    Water Management Areas
+                                </div>
+                                <div class="col-12" id="sub_water_management_areas"></div>
+                                 <div class="col-12 sub-title" class="site-details-header">
+                                    SA Ecoregion
+                                </div>
+                                 <div class="col-12" id="sa_ecoregions"></div>
                             </div>
 
                     </div>
@@ -144,134 +155,213 @@
         <div style="height: 32px">
         </div>
         <div class="container row">
+            <div class="container dashboard-wrapper">
+        <div class="container row">
             <div class="col-lg-4">
-                <div id="site-markers"></div>
-                <div class="card">
-                    <div class="card-header">
-                        <div class="card-header-title pull-left d-inline">
-                            Overview
+                <div class="row">
+                    {# Distribution #}
+                    <div class="col-lg-12" id="fish-ssdd-distribution">
+                                        <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-title pull-left d-inline">
+                                Overview
+                            </div>
+                            <button id="export-locationsite-map"
+                                    class="btn btn-default pull-right"><i
+                                    class="fa fa-download"></i></button>
                         </div>
-                        <button id="export-locationsite-map"
-                                class="btn btn-default pull-right"><i
-                                class="fa fa-download"></i></button>
-                    </div>
-                    <div class="card-body locationsite-map-wrapper">
-                        <div id="locationsite-map" class="map"
-                             style="height: 300px; width: 100%;"></div>
-                        <div id="overview-dashboard-table"
-                             class="dashboard-table"
-                             style="margin-top: 10px; margin-bottom: 10px">
-                            <table class="table">
-                                <tr>
-                                    <td id="site-name-label">Name</td>
-                                    <td id="site-name"></td>
-                                </tr>
-                                <tr>
-                                    <td>Total Records</td>
-                                    <td id="total-records">0</td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card" style="margin-top: 20px">
-                    <div class="card-header">
-                        <div class="pull-left d-inline">
-                            Occurence data
-                        </div>
-                        <button class="btn btn-info download-as-csv pull-right">
-                            Download as
-                            CSV
-                        </button>
-                    </div>
-                    <div class="card-body">
-                        <div class="dashboard-table">
-                            <table id="occurence-table" class="table">
-                                <tr>
-                                    <th>Taxon</th>
-                                    <th>Category</th>
-                                    <th>Records</th>
-                                </tr>
-                            </table>
+                        <div class="card-body locationsite-map-wrapper">
+                            <div id="locationsite-map" class="map"
+                                 style="height: 300px; width: 100%;"></div>
+                            <div id="overview-dashboard-table"
+                                 class="dashboard-table"
+                                 style="margin-top: 10px; margin-bottom: 10px">
+                                <table class="table">
+                                    <tr>
+                                        <td id="site-name-label">Name</td>
+                                        <td id="site-name"></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Total Records</td>
+                                        <td id="total-records">0</td>
+                                    </tr>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                {% if is_sass_enabled %}
-                      <div class="container-fluid sass-dashboard-button" style="padding-top: 20px; color: white; padding-left: 0; padding-right: 0">
-                          <a class="btn right-panel-button right-panel-last-button fbis-button sass-button" style="margin: 0 !important;">Open SASS Dashboard</a>
-                      </div>
-                {% endif %}
+                <div class="row">
+                    {# Overview #}
+                    <div class="col-lg-12" id="fish-ssdd-overview">
+                        <div class="card">
+                            <div class="card-header">Overview</div>
+                        </div>
+                        {# Overview Site details #}
+                        <div class="container row"
+                             id="fish-ssdd-site-details">
 
+                            <div class="col-12" id="overview"></div>
+                            <div class="col-12 sub-title"
+                                 class="site-details-header">
+                                Catchments
+                            </div>
+                            <div class="col-12" id="catchments"></div>
+                            <div class="col-12 sub-title"
+                                 class="site-details-header">
+                                Water Management Areas
+                            </div>
+                            <div class="col-12"
+                                 id="sub_water_management_areas"></div>
+                            <div class="col-12 sub-title"
+                                 class="site-details-header">
+                                SA Ecoregion
+                            </div>
+                            <div class="col-12" id="sa_ecoregions"></div>
+                        </div>
+
+                    </div>
+                </div>
+                    <div class="row">
+                        {# Occurrence Data #}
+                        <div class="col-lg-12" id="fish-ssdd-occurrence-data">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-8 dashboard-graph-wrapper">
+
+                </div>
             </div>
-            <div class="col-lg-8" id="dashboard-graph-wrapper">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="d-inline card-header-title pull-left">
-                            Collections Chart
-                        </div>
-                        <button class="btn btn-default pull-right download-origin-chart">
-                            <i class="fa fa-download"></i></button>
-                    </div>
-                    <div class="card-body">
-                        <div class="container-fluid no-padding">
-                            <div class="row detailed-table-chart">
-                                <div class="col-md-4 no-padding">
-                                    <canvas id="collection-category-graph"></canvas>
-                                    <div class="chart-label">Origin</div>
-                                </div>
-                                <div class="col-md-4 no-padding">
-                                    <canvas id="cons-status-graph"></canvas>
-                                    <div class="chart-label">Cons status</div>
-                                </div>
-                                <div class="col-md-4 no-padding">
-                                    <canvas id="sampling-method-graph"></canvas>
-                                    <div class="chart-label">Sampling method
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        </div>
 
-                <div class="row"
-                     style="margin: 0 !important; margin-top: 15px !important;">
-                    <div class="card full-width">
-                        <div class="card-header">
-                            <div class="d-inline card-header-title pull-left">
-                                Records Timeline Graph
-                            </div>
-                            <button class="btn btn-default pull-right download-record-timeline">
-                                <i class="fa fa-download"></i></button>
-                        </div>
-                        <div class="card-body">
-                            <div id="record-timeline-wrapper"
-                                 class="chart-wrapper">
-                                <canvas id="records-timeline-graph"
-                                        height="200px"></canvas>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row"
-                     style="margin: 0 !important; margin-top: 15px !important; margin-bottom: 20px !important;">
-                    <div class="card full-width">
-                        <div class="card-header">
-                            <div class="d-inline card-header-title pull-left">
-                                Collection Timeline Graph
-                            </div>
-                            <button class="btn btn-default pull-right download-collection-timeline">
-                                <i class="fa fa-download"></i></button>
-                        </div>
-                        <div class="card-body">
-                            <div id="collection-timeline-wrapper"
-                                 class="chart-wrapper">
-                                <canvas id="collection-timeline-graph"
-                                        height="200px"></canvas>
-                            </div>
-                        </div>
-                    </div>
+{#            <div class="col-lg-4">#}
+{#                <div id="site-markers"></div>#}
+{#                <div class="card">#}
+{#                    <div class="card-header">#}
+{#                        <div class="card-header-title pull-left d-inline">#}
+{#                            Overview#}
+{#                        </div>#}
+{#                        <button id="export-locationsite-map"#}
+{#                                class="btn btn-default pull-right"><i#}
+{#                                class="fa fa-download"></i></button>#}
+{#                    </div>#}
+{#                    <div class="card-body locationsite-map-wrapper">#}
+{#                        <div id="locationsite-map" class="map"#}
+{#                             style="height: 300px; width: 100%;"></div>#}
+{#                        <div id="overview-dashboard-table"#}
+{#                             class="dashboard-table"#}
+{#                             style="margin-top: 10px; margin-bottom: 10px">#}
+{#                            <table class="table">#}
+{#                                <tr>#}
+{#                                    <td id="site-name-label">Name</td>#}
+{#                                    <td id="site-name"></td>#}
+{#                                </tr>#}
+{#                                <tr>#}
+{#                                    <td>Total Records</td>#}
+{#                                    <td id="total-records">0</td>#}
+{#                                </tr>#}
+{#                            </table>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+
+{#                <div class="card" style="margin-top: 20px">#}
+{#                    <div class="card-header">#}
+{#                        <div class="pull-left d-inline">#}
+{#                            Occurence data#}
+{#                        </div>#}
+{#                        <button class="btn btn-info download-as-csv pull-right">#}
+{#                            Download as#}
+{#                            CSV#}
+{#                        </button>#}
+{#                    </div>#}
+{#                    <div class="card-body">#}
+{#                        <div class="dashboard-table">#}
+{#                            <table id="occurence-table" class="table">#}
+{#                                <tr>#}
+{#                                    <th>Taxon</th>#}
+{#                                    <th>Category</th>#}
+{#                                    <th>Records</th>#}
+{#                                </tr>#}
+{#                            </table>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{##}
+{#                {% if is_sass_enabled %}#}
+{#                      <div class="container-fluid sass-dashboard-button" style="padding-top: 20px; color: white; padding-left: 0; padding-right: 0">#}
+{#                          <a class="btn right-panel-button right-panel-last-button fbis-button sass-button" style="margin: 0 !important;">Open SASS Dashboard</a>#}
+{#                      </div>#}
+{#                {% endif %}#}
+{##}
+{#            </div>#}
+{#            <div class="col-lg-8" id="dashboard-graph-wrapper">#}
+{#                <div class="card">#}
+{#                    <div class="card-header">#}
+{#                        <div class="d-inline card-header-title pull-left">#}
+{#                            Collections Chart#}
+{#                        </div>#}
+{#                        <button class="btn btn-default pull-right download-origin-chart">#}
+{#                            <i class="fa fa-download"></i></button>#}
+{#                    </div>#}
+{#                    <div class="card-body">#}
+{#                        <div class="container-fluid no-padding">#}
+{#                            <div class="row detailed-table-chart">#}
+{#                                <div class="col-md-4 no-padding">#}
+{#                                    <canvas id="collection-category-graph"></canvas>#}
+{#                                    <div class="chart-label">Origin</div>#}
+{#                                </div>#}
+{#                                <div class="col-md-4 no-padding">#}
+{#                                    <canvas id="cons-status-graph"></canvas>#}
+{#                                    <div class="chart-label">Cons status</div>#}
+{#                                </div>#}
+{#                                <div class="col-md-4 no-padding">#}
+{#                                    <canvas id="sampling-method-graph"></canvas>#}
+{#                                    <div class="chart-label">Sampling method#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{##}
+{#                <div class="row"#}
+{#                     style="margin: 0 !important; margin-top: 15px !important;">#}
+{#                    <div class="card full-width">#}
+{#                        <div class="card-header">#}
+{#                            <div class="d-inline card-header-title pull-left">#}
+{#                                Records Timeline Graph#}
+{#                            </div>#}
+{#                            <button class="btn btn-default pull-right download-record-timeline">#}
+{#                                <i class="fa fa-download"></i></button>#}
+{#                        </div>#}
+{#                        <div class="card-body">#}
+{#                            <div id="record-timeline-wrapper"#}
+{#                                 class="chart-wrapper">#}
+{#                                <canvas id="records-timeline-graph"#}
+{#                                        height="200px"></canvas>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="row"#}
+{#                     style="margin: 0 !important; margin-top: 15px !important; margin-bottom: 20px !important;">#}
+{#                    <div class="card full-width">#}
+{#                        <div class="card-header">#}
+{#                            <div class="d-inline card-header-title pull-left">#}
+{#                                Collection Timeline Graph#}
+{#                            </div>#}
+{#                            <button class="btn btn-default pull-right download-collection-timeline">#}
+{#                                <i class="fa fa-download"></i></button>#}
+{#                        </div>#}
+{#                        <div class="card-body">#}
+{#                            <div id="collection-timeline-wrapper"#}
+{#                                 class="chart-wrapper">#}
+{#                                <canvas id="collection-timeline-graph"#}
+{#                                        height="200px"></canvas>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
                 </div>
             </div>
         </div>
